--- a/local/src_v6/components/pages/index/sl-main/index.pug
+++ b/local/src_v6/components/pages/index/sl-main/index.pug
@@ -6,6 +6,13 @@ include ../../../sliders/nav/sl-nav-6/index
   nav: 'sl-nav-6',
   slides: [
       {
+          pic: 'sl-main-1.jpg',
+          title: 'сияйте этим летом с маслом flavia',
+          text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
+          btnText: 'подробнее',
+          btnTarget: '#fastBuyModal'
+      },
+      {
         pic: 'sl-main-1.jpg',
         title: 'сияйте этим летом с маслом flavia',
         text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
