--- a/local/templates/.default/_standart/examples/sliders.html
+++ b/local/templates/.default/_standart/examples/sliders.html
@@ -652,6 +652,26 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">подробнее</a>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="col-pic">
+																						<div class="pic"><img class="img" src="../../img/tmp/sl-main-1.jpg" alt="сияйте этим летом с маслом flavia"></div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																	<div class="slide">
+																		<div class="inner">
+																			<div class="container">
+																				<div class="row">
+																					<div class="col-text">
+																						<div class="b-wrap">
+																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
+																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
+																							<div class="btn-wrap">
 																																						<a class="btn btn-primary" data-toggle="modal" data-target="#numModal" href="#">подробнее</a>
 																							</div>
 																						</div>
