--- a/local/src_v6/components/modals/fast-buy-modal/index.pug
+++ b/local/src_v6/components/modals/fast-buy-modal/index.pug
@@ -1,87 +1,242 @@
 include ../../../components/base/btns/btn/index
-include ../../../components/block/f_star/index
-#fastBuyModal.modal.fade.vertical-center(tabindex='-1', role='dialog', aria-hidden='true')
+#fastBuyModal.fastBuyModal.modal.fade.vertical-center(tabindex='-1', role='dialog', aria-hidden='true')
   .modal-dialog
     .modal-content
       .modal-header
-        .h2.modal-title Купить
+        .h1.modal-title быстрая покупка
         button.close(type='button', data-dismiss='modal', aria-hidden='true')
       .modal-body
-        form#form-buy.form-horizontal(method='post', action='/')
-          fieldset.fieldset
-            // row
-            .form-group.control-group
-              label.name.label-pt.col-lg-3.col-sm-3.col-12(for='form-NAME-buy')
-                | Ваше имя
-                +f_star()
-              .text.col-lg-6.col-sm-5.col-12
-                input#form-NAME-buy.form-control.input-with-icon(type='text', name='form-NAME-buy', maxlength='50', spellcheck='true', value='', required='', style='background-image: url(' + DB.DIR + 'img/tmp/input-human.svg);')
-              .controls.col-lg-3.col-sm-4.col-12
-            // row
-            .form-group.control-group
-              label.name.label-pt.col-lg-3.col-sm-3.col-12(for='form-MAIL-buy')
-                | Эл. почта
-              .text.col-lg-6.col-sm-5.col-12
-                input#form-MAIL-buy.form-control(type='email', name='form-EMAIL-buy', maxlength='50', spellcheck='true', value='', placeholder='email@example.com', required='')
-              .controls.col-lg-3.col-sm-4.col-12
-            // row
-            .form-group.control-group
-              label.name.label-pt.col-lg-3.col-sm-3.col-12(for='form-PHONE-buy')
-                | Телефон
-                +f_star()
-              .text.col-lg-6.col-sm-5.col-12
-                input#form-PHONE-buy.form-control(type='tel', name='form-PHONE-buy', maxlength='50', spellcheck='true', required='')
-                p.help-block Например: +375 (29) 123-45-67
-              .controls.col-lg-3.col-sm-4.col-12
-            // row
-            .form-group.control-group
-              label.name.label-pt.col-lg-3.col-sm-3.col-12(for='form-MESSAGE-buy')
-                | Сообщение
-              .text.col-lg-6.col-sm-5.col-12
-                textarea#form-MESSAGE-buy.form-control(name='form-MESSAGE-buy', maxlength='500', cols='60', rows='4', spellcheck='true', required='')
-              .controls.col-lg-3.col-sm-4.col-12
-            // row
-            .form-group
-              .col-12.col-xs-offset-0.col-sm-offset-3
-                +btn-primary({type: 'input', className: 'btn_submit', text: 'Отправить'})(name='submit')
-        script.
-            !function () {
-                'use strict';
+        .row-fast
+          .col-fast.col-fast--pic
+            img(src=DB.DIR + 'img/tmp/fast-pic.png', alt='alt')
+          .col-fast.col-fast--text
+            .text BES активный шампунь для профилактики выпадения и активации роста новых волос c1
+          .col-fast.col-fast--tabs
+            .tabs-border.tabs.mb-0
+              ul.nav.nav-tabs.list-reset(role="tablist")
+                li.nav-item
+                  a.nav-link.active(href='#tab-fast-1', data-toggle='tab')
+                    span 100 мл
+                li.nav-item
+                  a.nav-link(href='#tab-fast-2', data-toggle='tab')
+                    span 50 мл
+          .col-fast.col-fast--quantity
+            include ../../block/quantity/index
+          .col-fast.col-fast--cost
+            .cost 22 BYN
+        .tab-content
+          #tab-fast-1.tab-pane.fade.in.active.show(role='tabpanel')
+            form#form-fastpay.form-1(name='form_fastpay', method='post', target='_top', action='/')
+              fieldset.fieldset
+                .row
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_FIO.form-control.input-with-icon.input-with-icon--human(type='text', name='form_fastpay_FIO', placeholder='Имя и фамилия', value='', required='')
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_TEL.form-control.js_mask_tel.input-with-icon.input-with-icon--tel(type='tel', name='form_fastpay_TEL', placeholder='Номер телефона', value='', required='')
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          select#form_fastpay_DELIVERY.form-control.ui-select.input-with-icon.input-with-icon--auto(name='form_fastpay_DELIVERY', required)
+                            option(value='', selected, disabled) Способ доставки
+                            option Курьерская доставка 1
+                            option Курьерская доставка 2
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          select#form_fastpay_PAY.form-control.ui-select.input-with-icon.input-with-icon--pay(name='form_fastpay_PAY', required)
+                            option(value='', selected, disabled) Способ оплаты
+                            option Способ оплаты 1
+                            option Способ оплаты 2
+                      .controls.col-12
+                  .col-12
+                    // row
+                    .form-group.mb-0
+                      .col-12.btn-wrap.text-center
+                        +btn-primary({
+                            type: 'button',
+                            className: 'btn_submit',
+                            text: '<span>оформить заказ</span>'
+                        })(id='form-fastpay-submit')
+            script.
+                !function () {
+                    'use strict';
 
-                function maskForm() {
-                    $("#form-PHONE-buy").mask("+375 - 99 - 999 - 99 - 99");
-                }
-
-                // Form validation
-                function initQuestValid() {
-                    // Validation options http://jqueryvalidation.org/documentation/
-                    var form_validator = $('#form-buy');
-                    if (form_validator.length && $.fn.validate) {
-                        form_validator.validate({
-                            rules: {
-                                'form-NAME-buy': {
-                                    required: true,
-                                    minlength: 4
-                                },
-                                'form-PHONE-buy': {
-                                    required: true,
-                                    minlength: 4
-                                },
-                                'form-MAIL-buy': {
-                                    required: true,
-                                    minlength: 4
-                                },
-                                'form-MESSAGE-buy': {
-                                    required: true,
-                                    minlength: 10
+                    // Form validation
+                    function initValid() {
+                        // Validation options http://jqueryvalidation.org/documentation/
+                        var form_validator = $('#form-fastpay');
+                        if (form_validator.length && $.fn.validate) {
+                            form_validator.validate({
+                                rules: {
+                                    'form_fastpay_FIO': {
+                                        required: true
+                                    },
+                                    'form_fastpay_TEL': {
+                                        required: true
+                                    },
+                                    'form_fastpay_DELIVERY': {
+                                        required: true
+                                    },
+                                    'form_fastpay_PAY': {
+                                        required: true
+                                    }
                                 }
-                            }
-                        });
+                            });
+                        }
                     }
-                }
 
-                $(function () {
-                    maskForm();
-                    initQuestValid();
-                });
-            }();
+                    function validOnButton() {
+                        var form = $('#form-fastpay');
+                        var btn = $('#form-fastpay-submit');
+
+                        btn.on('click', function () {
+                            if (form.valid()) {
+                                form.submit();
+                            }
+                        })
+                    }
+
+                    $(function () {
+                        initValid();
+                        validOnButton();
+                    });
+                }();
+          #tab-fast-2.tab-pane.fade(role='tabpanel')
+            form#form-fastpay-2.form-1(name='form_fastpay_2', method='post', target='_top', action='/')
+              fieldset.fieldset
+                .row
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_2_FIO.form-control.input-with-icon.input-with-icon--human(type='text', name='form_fastpay_2_FIO', placeholder='Имя и фамилия', value='', required='')
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_2_TEL.form-control.js_mask_tel.input-with-icon.input-with-icon--tel(type='tel', name='form_fastpay_2_TEL', placeholder='Номер телефона', value='', required='')
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          select#form_fastpay_2_DELIVERY.form-control.ui-select.input-with-icon.input-with-icon--auto(name='form_fastpay_2_DELIVERY', required)
+                            option(value='', selected, disabled) Способ доставки
+                            option Курьерская доставка 1
+                            option Курьерская доставка 2
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          select#form_fastpay_2_PAY.form-control.ui-select.input-with-icon.input-with-icon--pay(name='form_fastpay_2_PAY', required)
+                            option(value='', selected, disabled) Способ оплаты
+                            option Способ оплаты 1
+                            option Способ оплаты 2
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          select#form_fastpay_2_CITY.form-control.ui-select.input-with-icon.input-with-icon--location(name='form_fastpay_2_CITY', required)
+                            option(value='', selected, disabled) Населенный пункт
+                            option Населенный пункт 1
+                            option Населенный пункт 2
+                      .controls.col-12
+                  .col-lg-6.col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_2_POST.form-control.input-with-icon.input-with-icon--post(type='text', name='form_fastpay_2_POST', placeholder='Почтовый индекс', value='', required='')
+                      .controls.col-12
+                  .col-12
+                    // row
+                    .form-group.control-group
+                      .text.col-12
+                        .input-wrap
+                          input#form_fastpay_2_ADDRESS.form-control.input-with-icon.input-with-icon--address(type='text', name='form_fastpay_2_ADDRESS', placeholder='Адрес', value='', required='')
+                      .controls.col-12
+                  .col-12
+                    // row
+                    .form-group.mb-0
+                      .col-12.btn-wrap.text-center
+                        +btn-primary({
+                            type: 'button',
+                            className: 'btn_submit',
+                            text: '<span>оформить заказ</span>'
+                        })(id='form-fastpay-2-submit')
+            script.
+                !function () {
+                    'use strict';
+
+                    // Form validation
+                    function initValid() {
+                        // Validation options http://jqueryvalidation.org/documentation/
+                        var form_validator = $('#form-fastpay-2');
+                        if (form_validator.length && $.fn.validate) {
+                            form_validator.validate({
+                                rules: {
+                                    'form_fastpay_2_FIO': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_TEL': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_DELIVERY': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_PAY': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_CITY': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_POST': {
+                                        required: true
+                                    },
+                                    'form_fastpay_2_ADDRESS': {
+                                        required: true
+                                    }
+                                }
+                            });
+                        }
+                    }
+
+                    function validOnButton() {
+                        var form = $('#form-fastpay-2');
+                        var btn = $('#form-fastpay-2-submit');
+
+                        btn.on('click', function () {
+                            if (form.valid()) {
+                                form.submit();
+                            }
+                        })
+                    }
+
+                    $(function () {
+                        initValid();
+                        validOnButton();
+                    });
+                }();
