--- a/local/src_v6/pages/proj/lk-discont-non-logged.pug
+++ b/local/src_v6/pages/proj/lk-discont-non-logged.pug
@@ -14,3 +14,4 @@ block content
   include ../../components/pages/discont-non-logged/content/index
 block popup
   include ../../components/modals/fast-buy-modal/index
+  include ../../components/modals/modal-num/index
