--- a/local/templates/.default/lk-discont.html
+++ b/local/templates/.default/lk-discont.html
@@ -591,7 +591,7 @@
 											<div class="discont__col discont__col--left">
 												<div class="discont__title">Ваша скидка 5%</div>
 												<div class="discont__level">уровень карты: бронзовый</div>
-																						<a class="btn btn-secondary" href="#">сменить карту</a>
+																						<a class="btn btn-secondary" data-toggle="modal" data-target="#numModal" href="#">сменить карту</a>
 											</div>
 											<div class="discont__col discont__col--right"><img class="discont__img" src="img/tmp/discont.jpg" alt="alt"></div>
 										</div>
@@ -1062,6 +1062,22 @@
 										    });
 										}();
 									</script>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="bannerModal modal fade vertical-center" id="bannerModal" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body">
+							<button class="close" type="button" data-dismiss="modal" aria-hidden="true"></button>
+							<div class="d-flex">
+								<div class="col-pic d-none d-md-block"><img src="img/tmp/modal-banner.png" alt="alt"></div>
+								<div class="col-text">
+									<div class="text"><span>Первый раз на сайте?</span><br><br><span>Зарегистрируйтесь и</span><br><span class="with-big">получите <span class="color">скидку <span class="big">10%</span></span> на первую покупку</span></div>
+															<a class="btn btn-third" href="#">зарегистрироваться</a>
 								</div>
 							</div>
 						</div>
