--- a/local/src_v6/components/pages/discont-non-logged/content/index.pug
+++ b/local/src_v6/components/pages/discont-non-logged/content/index.pug
@@ -4,7 +4,7 @@
       .discont__col.discont__col--left
         .discont__title Ваша скидка 5%
         .discont__level уровень карты: бронзовый
-        +btn-secondary({text: 'добавить карту'})
+        +btn-secondary({text: 'добавить карту'})(data-toggle='modal', data-target='#numModal')
       .discont__col.discont__col--right
         img.discont__img(src=DB.DIR + 'img/tmp/discont-not.jpg', alt='alt')
     .discont__subtitle Условия дисконтной программы
