--- a/local/src_v6/pages/proj/lk-discont.pug
+++ b/local/src_v6/pages/proj/lk-discont.pug
@@ -14,3 +14,4 @@ block content
   include ../../components/pages/discont/content/index
 block popup
   include ../../components/modals/fast-buy-modal/index
+  include ../../components/modals/modal-banner/index
