--- a/local/templates/.default/lk-discont-non-logged.html
+++ b/local/templates/.default/lk-discont-non-logged.html
@@ -591,7 +591,7 @@
 											<div class="discont__col discont__col--left">
 												<div class="discont__title">Ваша скидка 5%</div>
 												<div class="discont__level">уровень карты: бронзовый</div>
-																						<a class="btn btn-secondary" href="#">добавить карту</a>
+																						<a class="btn btn-secondary" data-toggle="modal" data-target="#numModal" href="#">добавить карту</a>
 											</div>
 											<div class="discont__col discont__col--right"><img class="discont__img" src="img/tmp/discont-not.jpg" alt="alt"></div>
 										</div>
@@ -1059,6 +1059,285 @@
 										    $(function () {
 										        initValid();
 										        validOnButton();
+										    });
+										}();
+									</script>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="numModal modal fade vertical-center" id="numModal" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<div class="h1 modal-title">Введите номер карты</div>
+							<button class="close" type="button" data-dismiss="modal" aria-hidden="true"></button>
+						</div>
+						<div class="modal-body">
+							<div class="form-num">
+								<div class="form-num__inner">
+									<form class="form-1" id="form-num" name="form_num" method="post" target="_top" action="/">
+										<fieldset class="fieldset">
+											<div class="code-wrap">
+												<div class="row-num">
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_1" type="text" name="form_num_CODE_1" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_2" type="text" name="form_num_CODE_2" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_3" type="text" name="form_num_CODE_3" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_4" type="text" name="form_num_CODE_4" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_5" type="text" name="form_num_CODE_5" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_6" type="text" name="form_num_CODE_6" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_7" type="text" name="form_num_CODE_7" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_8" type="text" name="form_num_CODE_8" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_9" type="text" name="form_num_CODE_9" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_10" type="text" name="form_num_CODE_10" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_11" type="text" name="form_num_CODE_11" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_12" type="text" name="form_num_CODE_12" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+													<div class="col-num">
+														<!-- row-->
+														<div class="form-group control-group">
+															<div class="text col-12">
+																<div class="input-wrap">
+																	<input class="form-control" id="form_num_CODE_13" type="text" name="form_num_CODE_13" maxlength="1" placeholder="" value="" required="">
+																</div>
+															</div>
+															<div class="controls col-12"></div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col-12">
+													<!-- row-->
+													<div class="form-group mb-0">
+														<div class="col-12 btn-wrap text-center">
+																					<button class="btn btn-primary btn_submit" id="form-num-submit" type="button">добавить карту</button>
+														</div>
+													</div>
+												</div>
+											</div>
+										</fieldset>
+									</form>
+									<script>
+										!function () {
+										    'use strict';
+										
+										    // Form validation
+										    function initValid() {
+										        // Validation options http://jqueryvalidation.org/documentation/
+										        var form_validator = $('#form-num');
+										        if (form_validator.length && $.fn.validate) {
+										            form_validator.validate({
+										                rules: {
+										                    'form_num_CODE_1': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_2': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_3': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_4': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_5': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_6': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_7': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_8': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_9': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_10': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_11': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_12': {
+										                        required: true,
+										                    },
+										                    'form_num_CODE_13': {
+										                        required: true,
+										                    }
+										                }
+										            });
+										        }
+										    }
+										
+										    function validOnButton() {
+										        var form = $('#form-num');
+										        var btn = $('#form-num-submit');
+										
+										        btn.on('click', function () {
+										            if (form.valid()) {
+										                form.submit();
+										            }
+										        })
+										    }
+										
+										    $(function () {
+										        initValid();
+										        validOnButton();
+										    });
+										}();
+									</script>
+									<script>
+										!function () {
+										    'use strict';
+										
+										    function codeFocus() {
+										        var codeInputs = $('#form-num [id^="form_num_CODE"]');
+										        if (codeInputs.length) {
+										            var num = 0;
+										
+										            codeInputs.each(function (index) {
+										                if (num !== codeInputs.length - 1) {
+										                    var self = $(this);
+										
+										                    self.off('input.codeInputs').on('input.codeInputs', function (e) {
+										                        e.preventDefault();
+										                        if ($(this).val() !== '') {
+										                            codeInputs[index + 1].focus();
+										                        }
+										                    });
+										                    num++;
+										                }
+										            });
+										        }
+										    }
+										
+										    $(function () {
+										        codeFocus();
 										    });
 										}();
 									</script>
