--- a/local/templates/.default/lk-discont.html
+++ b/local/templates/.default/lk-discont.html
@@ -593,7 +593,9 @@
 												<div class="discont__level">уровень карты: бронзовый</div>
 																						<a class="btn btn-secondary" data-toggle="modal" data-target="#numModal" href="#">сменить карту</a>
 											</div>
-											<div class="discont__col discont__col--right"><img class="discont__img" src="img/tmp/discont.jpg" alt="alt"></div>
+											<div class="discont__col discont__col--right">
+												<div class="discont__pic-wrap"><img class="discont__img" src="img/tmp/discont.jpg" alt="alt"><span class="discont__code">1 783 267 167 992</span></div>
+											</div>
 										</div>
 										<div class="discont__subtitle">Условия дисконтной программы</div>
 										<div class="discont__text">Дисконтная программа магазина профессиональной косметики - это возможность получать скидки до 10% от общей суммы покупок.<br>Получить скидку можно при первой же покупке!<br><br>Карта «Профи» выдаётся бесплатно, при совершении единовременной покупки на сумму свыше 50 рублей. Она даёт ее владельцу право на постоянную скидку 5% и действовать начинает с момента активации. Благодаря чему уже первая покупка будет совершена с приятным бонусом.<br><br>Далее, в зависимости от суммы вашей покупки постоянная скидка может быть увеличена :<br>на 7%- при совершении единовременной покупки свыше 100 бел.рублей<br>На 10% - при совершении единовременной покупки свыше 150 бел.рублей</div>
